tests/fail/add_empty_stack.avm
; add on an empty stack
add
